1. Added 'config' option to Makefile.    2. Added comments about config file in README.

--- a/README
+++ b/README
@@ -8,4 +8,12 @@ Features include:
     * Specify the punctuation used for ending lines.
     * Specify the punctuation used mid lines.
 
+The default configuration file is included ( loremipsum.DEFAULT.conf ) or can
+be built by running:
+    make config
+
+The configuration files that will be read (in order) are:
+    /etc/loremipsum.conf
+    <YOUR_HOME_DIRECTORY>/.loremipsumrc
+
 # vim:ts=4:tw=80:sw=4:et
